--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Havana</title>
 </head>
 <body><center>
     <h1 style="color: rgb(255, 0, 0);"><b><u>HAVANA  </u></b></h1>
@@ -14,7 +14,7 @@
 <ul>
     <li><a href="https://en.wikipedia.org/wiki/Santa_Clara,_Cuba" >santha clara </a></li></l>
     <li><a href="https://en.wikipedia.org/wiki/Camagüey" >camaguey</a></li></l>
-    <li><a href="https://en.wikipedia.org/wiki/Havana" >havana</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/Havana" >Havana</a></li>
 
 
 </ul>
