--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Havana</title>
+    <title>CUBA</title>
 </head>
 <body><center>
     <h1 style="color: rgb(255, 0, 0);"><b><u>HAVANA  </u></b></h1>
