--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CUBA</title>
 </head>
 <body><center>
-    <h1 style="color: rgb(255, 0, 0);"><b><u>HAVANA  </u></b></h1>
+    <h1 style="color: rgb(255, 0, 0);"><b><u>CUBA  </u></b></h1>
     <img src="https://media.cntraveler.com/photos/5e34a8f26afe310008176e5b/16:9/w_2240,c_limit/HavanaCubSkyline-2020-GettyImages-923813880.jpg" width="600"height=200>
     
 </center> 
